--- a/src/New Task/timerplaying.css
+++ b/src/New Task/timerplaying.css
@@ -20,9 +20,7 @@
     /* padding: 20px; */
     width: 100vw;
 }
-select{
-    /* border: 2px solid rgb(21, 186, 246); */
-}
+
 .row .datum .col{
     background-color: rgb(240, 235, 235);
    padding: 20px;
@@ -34,4 +32,10 @@ input[type="time" i]::-webkit-calendar-picker-indicator {
 }
 input[type="date" i]::-webkit-calendar-picker-indicator {
     display: none;
+}
+
+
+select:focus-visible{
+    border :2px solid  rgb(6, 167, 167);
+    outline: none;
 }
